--- a/christsAmbassadors/TacoFeed/TicketCollection/style.css
+++ b/christsAmbassadors/TacoFeed/TicketCollection/style.css
@@ -1,8 +1,14 @@
 #back {
-  position: fixed;
+  position: absolute;
   width: 100%;
   z-index: -1;
 }
+
+#top-bar {
+  padding-bottom: 14%;
+  margin-bottom: 0;
+}
+
 h1, h2 {
   text-align:center;
 }
@@ -10,4 +16,12 @@ h1, h2 {
   padding-left:1.5%;
   border:solid 2px black;
   margin-right:-2px;
+}
+
+#download {
+  position:absolute;
+  margin-left: 2%;
+  margin-top: 4%;
+  border: solid black 1px;
+  border-radius: 3px;
 }
